# gym

./: .gitignore  .mcp.json  BUSINESS_STRATEGY.md  CLAUDE.md  CLAUDE_TW.md  DASHBOARD_VERIFICATION.md  E2E-TEST-SETUP.md  GEMINI.md  PHASE_4_API_GUIDE.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  cookies.txt  drizzle.config.ts  test-directus-api.sh  test-hooks-api.sh  test-hooks-functionality.sh  健身房系統架構設計.md
.claude/: settings.local.json
.husky/: pre-commit
backend/: .dockerignore  .env.backup  .env.example  .env.production.example  .gitignore  .npmrc  DATABASE_INDEXES.md  Dockerfile  Dockerfile.directus  (+40 more)
backend-v2/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
rust-backend/: .env.example  Cargo.toml  README.md
rust-backend/migrations/: 20260607000100_core_mvp.sql  20260607000200_class_categories_contract_logs.sql  20260607000300_marketing_crm.sql
rust-backend/src/: config.rs  error.rs  main.rs  state.rs  validation.rs
rust-backend/src/http/: admin_notifications.rs  admin_tenants.rs  attendances.rs  auth.rs  branches.rs  check_ins.rs  class_categories.rs  class_scheduling.rs  classes.rs  contract_logs.rs  contracts.rs  dashboard_reports.rs  hr.rs  leaves.rs  makeup.rs  marketing.rs  member_app.rs  member_auth_extra.rs  member_fitness.rs  member_notifications.rs  member_oauth.rs  member_reviews.rs  member_support.rs  members.rs  membership_plans.rs  mod.rs  payments.rs  payroll.rs  performance.rs  shifts.rs  tenant.rs  users.rs
(+946 files in other folders)
