[package]
name = "gym-rust-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.4"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
